hphp/hack/test/typecheck/await_in_expressions2.php.exp
File "await_in_expressions2.php", line 5, characters 9-9:
Lval can no longer be used as an expression. Pull it out into it's own statement. (Parsing[1002])
